--- a/condaEnv.yml
+++ b/condaEnv.yml
@@ -1,267 +1,347 @@
-name: seurat
+name: seuratLatest
 channels:
+  - conda-forge/label/gcc7
+  - bioconda/label/gcc7
   - bioconda
   - conda-forge
   - defaults
   - r
 dependencies:
-  - filechunkio=1.6=py35_0
-  - ftputil=3.2=py35_0
-  - pyasn1-modules=0.0.5=py35_0
-  - pysftp=0.2.9=py35_0
-  - python-dateutil=2.3=py35_0
-  - r-data.table=1.10.4=r3.4.1_0
-  - r-deoptimr=1.0_8=r3.4.1_0
-  - r-diptest=0.75_7=r3.4.1_0
-  - r-fnn=1.1=r3.4.1_0
-  - r-purrr=0.2.2=1
-  - r-seurat=2.2.0=r3.4.1_0
-  - rsa=3.1.4=py35_0
-  - snakemake=4.8.0=py35_0
-  - urllib3=1.12=py35_0
-  - aioeasywebdav=2.2.0=py35_0
-  - aiohttp=3.1.2=py35_0
-  - appdirs=1.4.3=py_0
-  - asn1crypto=0.24.0=py35_0
-  - async-timeout=2.0.1=py35_0
-  - attrs=17.4.0=py_0
-  - boto3=1.7.2=py_0
-  - botocore=1.10.2=py_0
-  - bzip2=1.0.6=1
-  - ca-certificates=2018.4.16=0
-  - cachetools=2.0.1=py_0
-  - cairo=1.14.10=0
-  - certifi=2018.4.16=py35_0
-  - cffi=1.11.5=py35_0
-  - chardet=3.0.4=py35_0
-  - configargparse=0.12.0=py35_0
-  - cryptography=2.2.1=py35_0
-  - curl=7.55.1=0
-  - docutils=0.14=py35_0
-  - drmaa=0.7.8=py_0
-  - dropbox=7.3.1=py35_0
-  - fontconfig=2.12.6=0
-  - freetype=2.8.1=0
-  - gettext=0.19.7=1
-  - glib=2.55.0=0
-  - gmp=6.1.2=0
-  - google-auth=1.2.1=py_0
-  - google-auth-httplib2=0.0.2=py35_0
-  - google-cloud-core=0.24.1=py35_0
-  - google-cloud-storage=1.1.1=py35_0
-  - google-resumable-media=0.0.2=py35_0
-  - googleapis-common-protos=1.5.3=py35_0
-  - graphite2=1.3.10=0
-  - gsl=2.1=2
-  - harfbuzz=1.7.1=0
-  - httplib2=0.11.1=py35_0
-  - icu=58.2=0
-  - idna=2.6=py35_1
-  - idna_ssl=1.0.0=0
-  - jmespath=0.9.3=py35_0
-  - jpeg=9b=2
-  - krb5=1.14.2=0
-  - libffi=3.2.1=3
-  - libiconv=1.15=0
-  - libpng=1.6.34=0
-  - libprotobuf=3.5.2=0
-   - libssh2=1.8.0=2
-  - libtiff=4.0.9=0
-  - libxml2=2.9.7=0
-  - mkl_fft=1.0.1=py35_1
-  - mkl_random=1.0.1=py35_0
-  - multidict=4.1.0=py35_0
-  - ncurses=5.9=10
-  - openssl=1.0.2o=0
-  - pandas=0.22.0=py35_0
-  - pandoc=2.1.1=0
-  - pango=1.40.14=0
-  - paramiko=2.4.1=py35_0
-  - pcre=8.39=0
-  - pip=9.0.3=py35_0
-  - pixman=0.34.0=1
-  - prettytable=0.7.2=py35_1
-  - protobuf=3.5.2=py35_0
-  - psutil=5.4.3=py35_0
-  - pyasn1=0.4.2=py_0
-  - pycparser=2.18=py35_0
-  - pynacl=1.1.2=py35_0
-  - python=3.5.5=1
-  - python-irodsclient=0.7.0=py_0
-  - pytz=2018.3=py_0
-  - pyyaml=3.12=py35_1
-  - r-acepack=1.4.1=r3.4.1_0
-  - r-ape=5.0=r3.4.1_0
-  - r-assertthat=0.1=r3.4.1_0
-  - r-backports=1.0.5=r3.4.1_0
-  - r-base=3.4.1=3
-  - r-base64enc=0.1_3=r3.4.1_0
-  - r-bh=1.65.0_1=r3.4.1_0
-  - r-bindr=0.1=r3.4.1_0
-  - r-bindrcpp=0.2=r3.4.1_0
-  - r-bitops=1.0_6=r3.4.1_0
-  - r-car=2.1_4=r3.4.1_0
-  - r-caret=6.0_76=r3.4.1_0
-  - r-catools=1.17.1=r3.4.1_0
-  - r-checkmate=1.8.2=r3.4.1_0
-  - r-class=7.3_14=r3.4.1_0
-  - r-cli=1.0.0=r3.4.1_0
-  - r-cluster=2.0.6=r3.4.1_0
-  - r-codetools=0.2_15=r3.4.1_0
-  - r-colorspace=1.3_2=r3.4.1_0
-  - r-cowplot=0.9.1=r3.4.1_0
-  - r-crayon=1.3.4=r3.4.1_0
-  - r-crosstalk=1.0.0=r3.4.1_0
-  - r-curl=3.1=r3.4.1_0
-  - r-dichromat=2.0_0=r3.4.1_0
-  - r-diffusionmap=1.1_0=r3.4.1_0
-  - r-digest=0.6.12=r3.4.1_0
-  - r-doparallel=1.0.10=r3.4.1_0
-  - r-dplyr=0.7.4=r3.4.1_0
-  - r-dt=0.4=r3.4.1_0
-  - r-dtw=1.18_1=r3.4.1_0
-  - r-evaluate=0.10.1=r3.4.1_0
-  - r-findpython=1.0.2=r3.4.1_0
-  - r-flexmix=2.3_14=r3.4.1_0
-  - r-foreach=1.4.3=r3.4.1_0
-  - r-foreign=0.8_67=r3.4.1_0
-  - r-formatr=1.4=r3.4.1_0
-  - r-formula=1.2_1=r3.4.1_0
-  - r-fpc=2.1_10=r3.4.1_0
-  - r-gdata=2.17.0=r3.4.1_0
-  - r-getopt=1.20.0=r3.4.1_0
-  - r-getopt=1.20.0=r3.4.1_0
-  - r-ggplot2=2.2.1=r3.4.1_0
-  - r-ggridges=0.4.1=r3.4.1_0
-  - r-glue=1.1.1=r3.4.1_0
-  - r-gplots=3.0.1=r3.4.1_0
-  - r-gridbase=0.4_7=r3.4.1_0
-  - r-gridextra=2.3=r3.4.1_0
-  - r-gtable=0.2.0=r3.4.1_0
-  - r-gtools=3.5.0=r3.4.1_0
-  - r-hexbin=1.27.1=r3.4.1_0
-  - r-highr=0.6=r3.4.1_0
-  - r-hmisc=4.0_3=r3.4.1_0
-  - r-htmltable=1.9=r3.4.1_0
-  - r-htmltools=0.3.6=r3.4.1_0
-  - r-htmlwidgets=1.0=r3.4.1_0
-  - r-httpuv=1.3.5=r3.4.1_0
-  - r-httr=1.2.1=r3.4.1_0
-  - r-ica=1.0_1=r3.4.1_0
-  - r-igraph=1.1.2=r3.4.1_0
-  - r-irlba=2.1.2=r3.4.1_0
-  - r-iterators=1.0.8=r3.4.1_0
-  - r-jsonlite=1.5=r3.4.1_0
-  - r-kernlab=0.9_25=r3.4.1_0
-  - r-kernsmooth=2.23_15=r3.4.1_0
-  - r-knitr=1.16=r3.4.1_0
-  - r-labeling=0.3=r3.4.1_0
-  - r-lars=1.2=r3.4.1_0
-  - r-lattice=0.20_34=r3.4.1_0
-  - r-latticeextra=0.6_28=r3.4.1_0
-  - r-lazyeval=0.2.0=r3.4.1_0
-  - r-lme4=1.1_13=r3.4.1_0
-  - r-magrittr=1.5=r3.4.1_0
-  - r-markdown=0.8=r3.4.1_0
-  - r-mass=7.3_48=r3.4.1_0
-  - r-matrix=1.2_7.1=r3.4.1_0
-  - r-matrixmodels=0.4_1=r3.4.1_0
-  - r-mclust=5.3=r3.4.1_0
-  - r-mgcv=1.8_17=r3.4.1_0
-  - r-mime=0.5=r3.4.1_0
-  - r-minqa=1.2.4=r3.4.1_0
-  - r-mixtools=1.1.0=r3.4.1_0
-  - r-mnormt=1.5_5=r3.4.1_0
-  - r-modelmetrics=1.1.0=r3.4.1_0
-  - r-modeltools=0.2_21=r3.4.1_0
-  - r-munsell=0.4.3=r3.4.1_0
-  - r-mvtnorm=1.0_6=r3.4.1_0
-  - r-nlme=3.1_131=r3.4.1_0
-  - r-nloptr=1.0.4=r3.4.1_1
-  - r-nmf=0.20.6=r3.4.1_0
-  - r-nnet=7.3_12=r3.4.1_0
-  - r-numderiv=2016.8_1=r3.4.1_0
-  - r-openssl=0.9.7=r3.4.1_0
-  - r-pbapply=1.3_3=r3.4.1_0
-  - r-pbkrtest=0.4_7=r3.4.1_0
-  - r-pillar=1.1.0=r3.4.1_0
-  - r-pkgconfig=2.0.1=r3.4.1_0
-  - r-pkgmaker=0.22=r3.4.1_0
-  - r-plogr=0.1_1=r3.4.1_0
-  - r-plotly=4.7.1=r3.4.1_0
-  - r-plyr=1.8.4=r3.4.1_0
-  - r-prabclus=2.2_6=r3.4.1_0
-  - r-proto=1.0.0=r3.4.1_0
-  - r-proxy=0.4_17=r3.4.1_0
-  - r-quantreg=5.33=r3.4.1_0
-  - r-r.methodss3=1.7.1=r3.4.1_0
-  - r-r.oo=1.21.0=r3.4.1_0
-  - r-r.utils=2.5.0=r3.4.1_0
-  - r-r6=2.2.0=r3.4.1_0
-  - r-ranger=0.7.0=r3.4.1_0
-  - r-rcolorbrewer=1.1_2=r3.4.1_0
-  - r-rcpp=0.12.13=r3.4.1_0
-  - r-rcppeigen=0.3.2.9.1=r3.4.1_0
-  - r-rcppprogress=0.3=r3.4.1_0
-  - r-registry=0.3=r3.4.1_0
-  - r-reshape2=1.4.2=r3.4.1_0
-  - r-rjson=0.2.15=r3.4.1_0
-  - r-rlang=0.1.2=r3.4.1_0
-  - r-rmarkdown=1.6=r3.4.1_2
-  - r-rngtools=1.2.4=r3.4.1_0
-  - r-robustbase=0.92_7=r3.4.1_0
-  - r-rocr=1.0_7=r3.4.1_0
-  - r-rpart=4.1_10=r3.4.1_0
-  - r-rprojroot=1.2=r3.4.1_0
-  - r-rtsne=0.13=r3.4.1_0
-  - r-scales=0.5.0=r3.4.1_0
-  - r-scatterplot3d=0.3_40=r3.4.1_0
-  - r-sdmtools=1.1_221=r3.4.1_1
-  - r-segmented=0.5_2.1=r3.4.1_0
-  - r-shiny=1.0.5=r3.4.1_0
-  - r-sn=1.5_0=r3.4.1_0
-  - r-sourcetools=0.1.6=r3.4.1_0
-  - r-sparsem=1.76=r3.4.1_0
-  - r-stringi=1.1.2=r3.4.1_0
-  - r-stringr=1.2.0=r3.4.1_0
-  - r-survival=2.40_1=r3.4.1_0
-  - r-tclust=1.3_1=r3.4.1_0
-  - r-tibble=1.4.2=r3.4.1_0
-  - r-tidyr=0.7.1=r3.4.1_0
-  - r-tidyselect=0.2.3=r3.4.1_0
-  - r-trimcluster=0.1_2=r3.4.1_0
-  - r-tsne=0.1_3=r3.4.1_0
-  - r-utf8=1.1.3=r3.4.1_0
-  - r-vgam=1.0_3=r3.4.1_0
-  - r-viridis=0.4.0=r3.4.1_0
-  - r-viridislite=0.2.0=r3.4.1_0
-  - r-xtable=1.8_2=r3.4.1_0
-  - r-yaml=2.1.14=r3.4.1_0
-  - ratelimiter=1.2.0=py35_0
-  - readline=7.0=0
-  - requests=2.13.0=py35_0
-  - s3transfer=0.1.13=py35_0
-  - setuptools=39.0.1=py35_0
-  - six=1.11.0=py35_1
-  - sqlite=3.20.1=2
-  - tk=8.6.7=0
-  - wheel=0.31.0=py35_0
-  - wrapt=1.10.11=py35_0
-  - xmlrunner=1.7.7=py_0
-  - xz=5.2.3=0
-  - yaml=0.1.7=0
-  - yarl=1.1.1=py35_0
-  - zlib=1.2.11=0
-  - bcrypt=3.1.4=py35ha35c455_0
-  - datrie=0.7.1=py35_0
-  - intel-openmp=2018.0.0=8
+  - _r-mutex=1.0.0=anacondar_1
+  - binutils_impl_linux-64=2.28.1=had2808c_3
+  - binutils_linux-64=7.2.0=had2808c_27
+  - bioconductor-annotate=1.60.0=r351_0
+  - bioconductor-annotationdbi=1.44.0=r351_0
+  - bioconductor-beachmat=1.4.0=r351hf484d3e_0
+  - bioconductor-biobase=2.42.0=r351h14c3975_0
+  - bioconductor-biocgenerics=0.28.0=r351_1
+  - bioconductor-biocneighbors=1.0.0=r351hf484d3e_0
+  - bioconductor-biocparallel=1.16.2=r351h1c2f66e_1
+  - bioconductor-delayedarray=0.8.0=r351h14c3975_0
+  - bioconductor-delayedmatrixstats=1.4.0=r351_0
+  - bioconductor-destiny=2.12.0=r351hf484d3e_0
+  - bioconductor-edger=3.24.1=r351hf484d3e_0
+  - bioconductor-genefilter=1.64.0=r351h1c2f66e_0
+  - bioconductor-genomeinfodb=1.18.1=r351_0
+  - bioconductor-genomeinfodbdata=1.2.0=r351_0
+  - bioconductor-genomicranges=1.34.0=r351h14c3975_0
+  - bioconductor-go.db=3.7.0=r351_0
+  - bioconductor-graph=1.60.0=r351h14c3975_0
+  - bioconductor-hdf5array=1.10.1=r351_0
+  - bioconductor-iranges=2.16.0=r351h14c3975_0
+  - bioconductor-limma=3.38.3=r351h14c3975_0
+  - bioconductor-org.hs.eg.db=3.7.0=r351_0
+  - bioconductor-rhdf5=2.26.0=r351hf484d3e_1
+  - bioconductor-rhdf5lib=1.4.2=r351h14c3975_1
+  - bioconductor-s4vectors=0.20.1=r351h14c3975_0
+  - bioconductor-scater=1.10.0=r351hf484d3e_0
+  - bioconductor-scran=1.10.1=r351hf484d3e_0
+  - bioconductor-singlecellexperiment=1.4.0=r351_0
+  - bioconductor-summarizedexperiment=1.12.0=r351_0
+  - bioconductor-topgo=2.34.0=r351_0
+  - bioconductor-tximport=1.8.0=r351_0
+  - bioconductor-xvector=0.22.0=r351h14c3975_0
+  - bioconductor-zlibbioc=1.28.0=r351h14c3975_0
+  - blas=1.0=mkl
+  - bwidget=1.9.11=1
+  - bzip2=1.0.6=h470a237_2
+  - ca-certificates=2018.11.29=ha4d7672_0
+  - cairo=1.14.12=h8948797_3
+  - certifi=2018.11.29=py36_1000
+  - curl=7.63.0=hbc83047_1000
+  - fontconfig=2.13.0=h9420a91_0
+  - freetype=2.9.1=h6debe1e_4
+  - fribidi=1.0.5=h14c3975_1000
+  - gcc_impl_linux-64=7.2.0=habb00fd_3
+  - gcc_linux-64=7.2.0=h550dcbe_27
+  - gettext=0.19.8.1=h5e8e0c9_1
+  - gfortran_impl_linux-64=7.2.0=hdf63c60_3
+  - gfortran_linux-64=7.2.0=h550dcbe_27
+  - glib=2.56.2=had28632_1001
+  - gmp=6.1.2=hfc679d8_0
+  - graphite2=1.3.12=hfc679d8_1
+  - gsl=2.4=h14c3975_4
+  - gxx_impl_linux-64=7.2.0=hdf63c60_3
+  - gxx_linux-64=7.2.0=h550dcbe_27
+  - harfbuzz=1.9.0=he243708_1001
+  - hdf5=1.10.3=hc401514_2
+  - icu=58.2=hfc679d8_0
+  - intel-openmp=2019.0=118
+  - jpeg=9c=h470a237_1
+  - krb5=1.16.1=h173b8e3_7
+  - libcurl=7.63.0=h20c2e04_1000
+  - libedit=3.1.20170329=haf1bffa_1
+  - libffi=3.2.1=hfc679d8_5
   - libgcc=7.2.0=h69d50b8_2
-  - libgcc-ng=7.2.0=h7cc24e2_2
+  - libgcc-ng=8.2.0=hdf63c60_1
+  - libgfortran=3.0.0=1
   - libgfortran-ng=7.2.0=hdf63c60_3
-  - libstdcxx-ng=7.2.0=h7a57d05_2
-  - mkl=2018.0.2=1
-  - numpy=1.14.2=py35hdbf6ddf_1
-  - openjdk=8.0.121=1
-prefix: /path/to/env/seurat
-
-
+  - libiconv=1.15=h470a237_3
+  - libpng=1.6.34=ha92aebf_2
+  - libssh2=1.8.0=1
+  - libstdcxx-ng=7.3.0=hdf63c60_0
+  - libtiff=4.0.9=he6b73bb_2
+  - libuuid=1.0.3=1
+  - libxcb=1.13=h470a237_2
+  - libxml2=2.9.8=h422b904_5
+  - llvmlite=0.25.0=py36hd28b015_1
+  - make=4.2.1=h14c3975_2004
+  - mkl=2019.1=144
+  - mkl_fft=1.0.10=py36h14c3975_1
+  - mkl_random=1.0.2=py36h637b7d7_2
+  - ncurses=6.1=hfc679d8_1
+  - numba=0.40.1=py36h637b7d7_1000
+  - numpy=1.15.4=py36h7e9f1db_0
+  - numpy-base=1.15.4=py36hde5b4d6_0
+  - openssl=1.1.1a=h14c3975_1000
+  - pango=1.42.4=h049681c_0
+  - pcre=8.42=h439df22_0
+  - pip=18.1=py36_1000
+  - pixman=0.34.0=h470a237_3
+  - pthread-stubs=0.4=h470a237_1
+  - python=3.6.7=h0371630_0
+  - r-abind=1.4_5=r351h6115d3f_1000
+  - r-acepack=1.4.1=r351ha65eedd_0
+  - r-ape=5.1=r351h9d2a408_2
+  - r-assertthat=0.2.0=r351h6115d3f_0
+  - r-backports=1.1.2=r351h96ca727_0
+  - r-base=3.5.1=h1e0a451_2
+  - r-base64enc=0.1_3=r351h96ca727_4
+  - r-beeswarm=0.2.3=r351h6115d3f_1001
+  - r-bh=1.66.0_1=r351h6115d3f_0
+  - r-bibtex=0.4.2=r351h14c3975_1
+  - r-bindr=0.1.1=r351h6115d3f_0
+  - r-bindrcpp=0.2.2=r351h9d2a408_1
+  - r-bit=1.1_14=r351hd10c6a6_0
+  - r-bit64=0.9_7=r351hd10c6a6_0
+  - r-bitops=1.0_6=r351h96ca727_4
+  - r-blob=1.1.1=r351_1
+  - r-boot=1.3_20=r351_1000
+  - r-callr=2.0.4=r351h6115d3f_0
+  - r-car=3.0_2=r351h6115d3f_1000
+  - r-cardata=3.0_1=r351h6115d3f_1001
+  - r-catools=1.17.1.1=r351h9d2a408_2
+  - r-cellranger=1.1.0=r351h6115d3f_1001
+  - r-checkmate=1.8.5=r351h96ca727_0
+  - r-class=7.3_14=r351hd10c6a6_4
+  - r-cli=1.0.0=r351h6115d3f_0
+  - r-clipr=0.4.1=r351h6115d3f_0
+  - r-clisymbols=1.2.0=r351h6115d3f_1
+  - r-cluster=2.0.7_1=r351hac1494b_0
+  - r-codetools=0.2_15=r351h6115d3f_0
+  - r-colorspace=1.3_2=r351h96ca727_0
+  - r-cowplot=0.9.3=r351h6115d3f_1
+  - r-crayon=1.3.4=r351h6115d3f_0
+  - r-crosstalk=1.0.0=r351hf348343_0
+  - r-curl=3.2=r351h96ca727_0
+  - r-data.table=1.11.4=r351h96ca727_0
+  - r-dbi=1.0.0=r351h6115d3f_1
+  - r-deoptimr=1.0_8=r351h6115d3f_0
+  - r-desc=1.2.0=r351h6115d3f_0
+  - r-devtools=1.13.6=r351h6115d3f_0
+  - r-digest=0.6.15=r351h96ca727_0
+  - r-diptest=0.75_7=r351hc070d10_1
+  - r-dosnow=1.0.16=r351_1
+  - r-dplyr=0.7.6=r351h9d2a408_1
+  - r-dt=0.4=r351h6115d3f_1001
+  - r-dtw=1.18_1=r351h470a237_2
+  - r-dynamictreecut=1.63_1=r351h6115d3f_1001
+  - r-e1071=1.7_0=r351h29659fb_1000
+  - r-evaluate=0.11=r351h6115d3f_0
+  - r-fansi=0.2.3=r351h96ca727_0
+  - r-fitdistrplus=1.0_11=r351h6115d3f_0
+  - r-flexmix=2.3_14=r351h6115d3f_1
+  - r-fnn=1.1.2.1=r351h9d2a408_1
+  - r-forcats=0.3.0=r351h6115d3f_1001
+  - r-foreach=1.4.4=r351h6115d3f_0
+  - r-foreign=0.8_71=r351h96ca727_0
+  - r-formatr=1.5=r351h6115d3f_1001
+  - r-formula=1.2_3=r351h6115d3f_0
+  - r-fpc=2.1_11.1=r351h6115d3f_1
+  - r-fs=1.2.6=r351h9d2a408_0
+  - r-futile.logger=1.4.3=r351h6115d3f_1001
+  - r-futile.options=1.0.1=r351h6115d3f_1000
+  - r-gbrd=0.4_11=r351h6115d3f_0
+  - r-gdata=2.18.0=r351h6115d3f_0
+  - r-ggbeeswarm=0.6.0=r351_1001
+  - r-ggplot2=3.0.0=r351h6115d3f_0
+  - r-ggridges=0.5.0=r351h6115d3f_1
+  - r-ggthemes=4.1.0=r351h6115d3f_0
+  - r-gh=1.0.1=r351h6115d3f_1
+  - r-git2r=0.23.0=r351h96ca727_1
+  - r-glue=1.3.0=r351h96ca727_0
+  - r-gplots=3.0.1=r351h6115d3f_0
+  - r-gridextra=2.3=r351h6115d3f_0
+  - r-gtable=0.2.0=r351h6115d3f_0
+  - r-gtools=3.8.1=r351h96ca727_0
+  - r-haven=2.0.0=r351h29659fb_1000
+  - r-hdf5r=1.0.1=r351h9d0107a_1
+  - r-hexbin=1.27.2=r351ha65eedd_0
+  - r-highr=0.7=r351h6115d3f_0
+  - r-hmisc=4.1_1=r351ha65eedd_0
+  - r-hms=0.4.2=r351h6115d3f_1000
+  - r-htmltable=1.12=r351h6115d3f_0
+  - r-htmltools=0.3.6=r351hfc679d8_2
+  - r-htmlwidgets=1.2=r351h6115d3f_0
+  - r-httpuv=1.4.5=r351hfc679d8_1
+  - r-httr=1.3.1=r351h6115d3f_0
+  - r-ica=1.0_1=r351_1
+  - r-igraph=1.2.2=r351he0ffe0d_1
+  - r-ini=0.3.1=r351h6115d3f_1
+  - r-irlba=2.3.2=r351h96ca727_0
+  - r-iterators=1.0.10=r351h6115d3f_0
+  - r-jsonlite=1.5=r351h96ca727_0
+  - r-kernlab=0.9_27=r351h9d2a408_0
+  - r-kernsmooth=2.23_15=r351hac1494b_4
+  - r-knitr=1.20=r351h6115d3f_0
+  - r-labeling=0.3=r351h6115d3f_4
+  - r-laeken=0.5.0=r351h6115d3f_0
+  - r-lambda.r=1.2.3=r351h6115d3f_1000
+  - r-lars=1.2=r351ha65eedd_0
+  - r-later=0.7.3=r351h9d2a408_0
+  - r-lattice=0.20_35=r351h96ca727_0
+  - r-latticeextra=0.6_28=r351h6115d3f_0
+  - r-lazyeval=0.2.1=r351h96ca727_0
+  - r-lme4=1.1_19=r351h29659fb_1000
+  - r-lmtest=0.9_36=r351ha65eedd_0
+  - r-locfit=1.5_9.1=r351h14c3975_1002
+  - r-lsei=1.2_0=r351ha44fe06_2
+  - r-magrittr=1.5=r351h6115d3f_4
+  - r-maptools=0.9_3=r351h96ca727_1002
+  - r-markdown=0.8=r351h96ca727_0
+  - r-mass=7.3_50=r351h96ca727_0
+  - r-matrix=1.2_14=r351h96ca727_0
+  - r-matrixmodels=0.4_1=r351h6115d3f_1001
+  - r-matrixstats=0.54.0=r351hc070d10_0
+  - r-mclust=5.4.1=r351h364d78e_2
+  - r-memoise=1.1.0=r351h6115d3f_0
+  - r-metap=1.0=r351h6115d3f_0
+  - r-mgcv=1.8_24=r351h96ca727_0
+  - r-mime=0.5=r351h96ca727_0
+  - r-minqa=1.2.4=r351h80f5a37_1002
+  - r-mixtools=1.1.0=r351hc070d10_2
+  - r-modeltools=0.2_22=r351h6115d3f_0
+  - r-munsell=0.5.0=r351h6115d3f_0
+  - r-mvtnorm=1.0_8=r351ha65eedd_0
+  - r-nlme=3.1_137=r351ha65eedd_0
+  - r-nloptr=1.0.4=r351h29659fb_1003
+  - r-nnet=7.3_12=r351h96ca727_0
+  - r-npsurv=0.4_0=r351h6115d3f_0
+  - r-openssl=1.0.2=r351h96ca727_1
+  - r-openxlsx=4.1.0=r351h29659fb_1000
+  - r-pbapply=1.3_4=r351h6115d3f_0
+  - r-pbkrtest=0.4_7=r351h6115d3f_1001
+  - r-pillar=1.3.0=r351h6115d3f_0
+  - r-pkgbuild=1.0.0=r351h6115d3f_0
+  - r-pkgconfig=2.0.1=r351h6115d3f_0
+  - r-pkgload=1.0.1=r351h9d2a408_0
+  - r-plogr=0.2.0=r351h6115d3f_0
+  - r-plotly=4.8.0=r351h6115d3f_0
+  - r-plyr=1.8.4=r351h9d2a408_2
+  - r-png=0.1_7=r351h96ca727_0
+  - r-prabclus=2.2_6=r351h6115d3f_1
+  - r-prettyunits=1.0.2=r351hf348343_0
+  - r-processx=3.2.0=r351hc070d10_1
+  - r-promises=1.0.1=r351h9d2a408_0
+  - r-proxy=0.4_22=r351hc070d10_0
+  - r-pryr=0.1.4=r351h29659fb_0
+  - r-ps=1.1.0=r351hc070d10_1
+  - r-purrr=0.2.5=r351h96ca727_0
+  - r-quantreg=5.38=r351ha65eedd_1000
+  - r-r.methodss3=1.7.1=r351h6115d3f_0
+  - r-r.oo=1.22.0=r351h6115d3f_0
+  - r-r.utils=2.6.0=r351h6115d3f_0
+  - r-r6=2.2.2=r351h6115d3f_0
+  - r-ranger=0.11.1=r351h29659fb_0
+  - r-rann=2.6=r351h9d2a408_0
+  - r-rcmdcheck=1.3.0=r351h6115d3f_0
+  - r-rcolorbrewer=1.1_2=r351h6115d3f_0
+  - r-rcpp=0.12.17=r351h9d2a408_2
+  - r-rcppannoy=0.0.10=r351h29659fb_1001
+  - r-rcppeigen=0.3.3.4.0=r351h9d2a408_2
+  - r-rcppprogress=0.4=r351hfc679d8_2
+  - r-rcurl=1.95_4.11=r351hc070d10_3
+  - r-rdpack=0.10_1=r351h6115d3f_0
+  - r-readr=1.3.1=r351h29659fb_1000
+  - r-readxl=1.1.0=r351h29659fb_1002
+  - r-rematch=1.0.1=r351h6115d3f_1001
+  - r-remotes=2.0.1=r351h6115d3f_0
+  - r-reshape2=1.4.3=r351h9d2a408_2
+  - r-reticulate=1.10=r351h9d2a408_1
+  - r-rio=0.5.16=r351h6115d3f_1000
+  - r-rjson=0.2.20=r351h9d2a408_0
+  - r-rlang=0.2.1=r351h96ca727_0
+  - r-rmarkdown=1.10=r351h6115d3f_0
+  - r-robustbase=0.93_2=r351ha65eedd_0
+  - r-rocr=1.0_7=r351h6115d3f_4
+  - r-rpart=4.1_13=r351hd10c6a6_0
+  - r-rprojroot=1.3_2=r351h6115d3f_0
+  - r-rsqlite=2.1.1=r351h9d2a408_0
+  - r-rstudioapi=0.7=r351h6115d3f_0
+  - r-rtsne=0.13=r351hfc679d8_2
+  - r-scales=1.0.0=r351h9d2a408_1
+  - r-scatterplot3d=0.3_41=r351h6115d3f_1000
+  - r-sdmtools=1.1_221=r351h470a237_3
+  - r-segmented=0.5_3.0=r351h6115d3f_0
+  - r-sessioninfo=1.1.0=r351h6115d3f_0
+  - r-seurat=2.3.4=r351h9d2a408_1
+  - r-shiny=1.1.0=r351h6115d3f_0
+  - r-shinydashboard=0.7.1=r351h6115d3f_1000
+  - r-smoother=1.1=r351_1000
+  - r-snow=0.4_3=r351h6115d3f_0
+  - r-sourcetools=0.1.7=r351hfc679d8_0
+  - r-sp=1.3_1=r351h96ca727_1000
+  - r-sparsem=1.77=r351h364d78e_1
+  - r-statmod=1.4.30=r351h9ac9557_1002
+  - r-stringi=1.2.4=r351h9d2a408_1
+  - r-stringr=1.3.1=r351h6115d3f_0
+  - r-survival=2.42_6=r351h96ca727_0
+  - r-tibble=1.4.2=r351h96ca727_0
+  - r-tidyr=0.8.1=r351h9d2a408_2
+  - r-tidyselect=0.2.4=r351h9d2a408_2
+  - r-tinytex=0.6=r351h6115d3f_0
+  - r-trimcluster=0.1_2.1=r351h6115d3f_0
+  - r-tsne=0.1_3=r351_1
+  - r-ttr=0.23_4=r351ha65eedd_1000
+  - r-usethis=1.4.0=r351h6115d3f_0
+  - r-utf8=1.1.4=r351h96ca727_0
+  - r-vcd=1.4_4=r351h6115d3f_1001
+  - r-vim=4.8.0=r351h29659fb_0
+  - r-vipor=0.4.5=r351h6115d3f_1001
+  - r-viridis=0.5.1=r351h6115d3f_0
+  - r-viridislite=0.3.0=r351h6115d3f_0
+  - r-whisker=0.3_2=r351hf348343_4
+  - r-withr=2.1.2=r351h6115d3f_0
+  - r-xfun=0.3=r351h6115d3f_0
+  - r-xml=3.98_1.16=r351hc070d10_0
+  - r-xopen=1.0.0=r351h6115d3f_0
+  - r-xtable=1.8_2=r351h6115d3f_0
+  - r-xts=0.11_1=r351h96ca727_1000
+  - r-yaml=2.2.0=r351h96ca727_0
+  - r-zip=1.0.0=r351h96ca727_1001
+  - r-zoo=1.8_3=r351h96ca727_0
+  - readline=7.0=haf1bffa_1
+  - scikit-learn=0.20.2=py36hd81dba3_0
+  - scipy=1.2.0=py36h7c811a0_0
+  - setuptools=40.5.0=py36_0
+  - sqlite=3.25.3=hb1c47c0_0
+  - tk=8.6.8=ha92aebf_0
+  - tktable=2.10=h14c3975_0
+  - umap-learn=0.3.7=py36_1000
+  - wget=1.19.5=h20c2e04_0
+  - wheel=0.32.2=py36_0
+  - xorg-kbproto=1.0.7=h470a237_2
+  - xorg-libice=1.0.9=h470a237_4
+  - xorg-libsm=1.2.2=h470a237_5
+  - xorg-libx11=1.6.6=h470a237_0
+  - xorg-libxau=1.0.8=h470a237_6
+  - xorg-libxdmcp=1.1.2=h470a237_7
+  - xorg-libxext=1.3.3=h470a237_4
+  - xorg-libxrender=0.9.10=h470a237_2
+  - xorg-libxt=1.1.5=h470a237_2
+  - xorg-renderproto=0.11.1=h470a237_2
+  - xorg-xextproto=7.3.0=h470a237_2
+  - xorg-xproto=7.0.31=h470a237_7
+  - xz=5.2.4=h470a237_1
+  - zlib=1.2.11=h470a237_3
+prefix: /path/to/env
